ProfilesController refactoring. ProfilePolicy implementation.
* ProfilesController - refactored CRUD functional. Now user able to see all his or her profiles and destroy concrete profile.

* ProfilePolicy - implemented ProfilePolicy.

* tests - covered the above changes with tests.

* swagger - generated new docs with rswag.
